garrison transparency explanation moved to correct section

--- a/child_pages/cc-elections/Candidates/garisson_heather.html
+++ b/child_pages/cc-elections/Candidates/garisson_heather.html
@@ -327,7 +327,22 @@
         <img class="gauge" src="../../../assets/gauge_dead_center.svg" alt="">
         <!-- <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button> -->
          <br>
-
+         <details class="can-sec" id="transparency-accessibility">
+            <summary style="color: blue;">
+                <strong>Explanation</strong>
+            </summary>
+            <p>
+                Relative to the Millville status quo, Heather Garrison’s transparency and accessibility is rated 
+                <strong>Average (Trending Upwards)</strong>. She has made herself available for a brief “man on the street” 
+                interview, offering a glimpse of her background and campaign message about community-driven change.  
+                However, voters looking for a fuller picture of her priorities will find limited detail beyond these 
+                initial statements.  
+                <br><br>
+                To move toward a stronger rating, Garrison could publish a comprehensively detailed platform on a dedicated 
+                website, host well-advertised meet-and-greet events where residents can ask questions, and participate in 
+                one or more longer-form campaign or press interviews to unpack her message in depth.
+                </p>
+        </details>
     </div> 
 
      
@@ -363,18 +378,16 @@
         <li>
             <details>
             <summary style="color: blue;"><strong>Highlighting Millville’s Positives</strong></summary>
-            <p>          
-                <p>
-                Relative to the Millville status quo, Heather Garrison’s transparency and accessibility is rated 
-                <strong>Average (Trending Upwards)</strong>. She has made herself available for a brief “man on the street” 
-                interview, offering a glimpse of her background and campaign message about community-driven change.  
-                However, voters looking for a fuller picture of her priorities will find limited detail beyond these 
-                initial statements.  
-                <br><br>
-                To move toward a stronger rating, Garrison could publish a comprehensively detailed platform on a dedicated 
-                website, host well-advertised meet-and-greet events where residents can ask questions, and participate in 
-                one or more longer-form campaign or press interviews to unpack her message in depth.
-              </p>
+            <p>
+                Garrison believes that Millville’s reputation can improve if its positive aspects are given more visibility. 
+                She says she wants to “help change the narrative” so residents and outsiders alike see Millville as 
+                a place with opportunity rather than decline. 
+            </p>
+            <br>
+            <p>
+                While she has not yet outlined specific policy proposals, her stated focus is on building a sense of safety, 
+                inclusion, and pride among residents through community and economic development initiatives.
+            </p>
             </details>
         </li>
         </ul>
