gregoire transparency explanation updated

--- a/child_pages/cc-elections/Candidates/gregoire.html
+++ b/child_pages/cc-elections/Candidates/gregoire.html
@@ -178,7 +178,8 @@
 
       To move toward a top-tier transparency rating, we’ll look for: (1) a centralized, always-updating web presence; (2) consistent public 
       availability (events, forums, long-form interviews); (3) concrete, time-bound plans/budgets for staffing/equipment; and (4) follow-through 
-      on communications promises (e.g., documented responses to resident input). For now, the rating sits at <em>“Above Average 
+      on communications promises (e.g., documented responses to resident input). Also, with the recent plane banner at the Millville football game, it might be time to make an official ticket 
+      announcement for Sooy, McGinty, and Gregoire. For now, the rating sits at <em>“Above Average 
         (trending upwards)”</em> based on responsiveness and clear themes laid out early.
       <br><br>
       Click the red x at the top of this box and then scroll down for more in-depth information and sources.
