cossaboon dual modal abandoned

--- a/child_pages/cc-elections/Candidates/cossaboon.html
+++ b/child_pages/cc-elections/Candidates/cossaboon.html
@@ -271,7 +271,29 @@
                  <!-- <a href="https://www.facebook.com/robert.austino/" target="_blank"><i class="fa-brands fa-square-facebook" style="color: blue"></i></a> -->
              </div>
 
-             <button class="quick-summary-reopen">quick candidate summary</button>
+             <!-- <button class="quick-summary-reopen">quick candidate summary</button> -->
+              <details class="can-sec" id="quick-summary">
+                <summary style="color: blue;">
+                    <strong>Quick Summary</strong>
+                </summary>
+                Carole Cossaboon is the incumbent Millville City Commissioner, appointed in early 2025 to fill a vacancy and now running for a full term. A lifelong Millville resident, she has 
+                over 30 years of experience working in public education as an administrative assistant at Holly Heights School and as a substitute teacher. She holds an associate degree in 
+                education, a bachelor’s degree in sociology, and a graduate certificate in autism and behavior.
+                <br>
+                <br>
+                Cossaboon has been active in a wide range of community organizations, including the Millville Elks, the Planning Board, the UEZ Board, and several civic and charitable boards and 
+                clubs. She emphasizes accountability in local government, advocating for stricter enforcement on absentee landlords, more inspections of vacant properties, and cleaner, safer 
+                neighborhoods as a foundation for economic development.
+                <br>
+                <br>
+                Her platform focuses on addressing blight, improving code enforcement, and boosting public safety staffing to meet state standards. She also supports working with outside agencies 
+                to attract businesses, writing grants for local programs, and learning from other communities to create opportunities in Millville.
+                <br>
+                <br>
+                Cossaboon describes herself as approachable, candid, and respectful. As a registered Independent, she stresses that her only agenda is to work collaboratively with fellow 
+                commissioners, regardless of party affiliation, to serve the city’s residents. She plans to continue attending community events, meeting directly with voters, and listening to 
+                concerns as the election approaches.
+            </details>
 
              <div class="election-date">
                  <p>This election is on November 5th, 2024</p>
@@ -296,7 +318,25 @@
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
         <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
-        <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
+        <!-- <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button> -->
+         <br>
+         <details class="can-sec" id="transparency-accessibility">
+            <summary style="color: blue;">
+                <strong>Explanation</strong>
+            </summary>
+            As a sitting commissioner, Carole Cossaboon has demonstrated commendable transparency by responding to the candidate questionnaire early in the general election season. This 
+                positions her ahead of the curve in terms of providing voters with clear information about her experience and priorities.
+                <br>
+                <br>
+                That said, this is a crowded race, and significant additional information and public engagement will likely emerge over the next several months. While Commissioner Cossaboon has 
+                been responsive in written format, there has been no indication so far of interest in scheduling a radio interview or a more in-depth podcast closer to the election. These formats 
+                are not mandatory, and candidates have every right to set their own campaign strategies and timing; however, because the opportunity was presented early and no plans were made, 
+                it is important to note that this decision could impact public perception of accessibility later in the season.
+                <br>
+                <br>
+                Overall, the early cooperation and thorough written responses reflect a positive level of transparency, with room to strengthen this further through more live or recorded 
+                public-facing dialogue as the campaign progresses.
+        </details>
     </div> 
 
     <div class="title-info">
