lods transparency explanation updated

--- a/child_pages/cc-elections/Candidates/lods.html
+++ b/child_pages/cc-elections/Candidates/lods.html
@@ -187,7 +187,8 @@
                 yet represent full-spectrum transparency, it sets a higher bar than many other candidates and offers a credible foundation to build on.
                 <br>
                 <br>
-                If future updates continue to follow this model—addressing more issues, making comparisons clearer, and responding to developments as campaign 
+                Furthermore, she is now scheduled to appear on our radio show on WVLT, 92.1 FM on Tuesday September 30th from 5-6pm. This should serve as an opportunity to continue to follow this 
+                model—addressing more issues, making comparisons clearer, and responding to developments as campaign 
                 season unfolds—Lods could help reframe what transparency looks like for down-ballot races. The door is open for voters to stay informed, and 
                 for the candidate to continue rising above the status quo.
                 <br>
