kott transparency rating explanation update

--- a/child_pages/cc-elections/Candidates/kott.html
+++ b/child_pages/cc-elections/Candidates/kott.html
@@ -169,9 +169,12 @@
     <p>
       Initial transparency/accessibility view: <em>Developing (trending upward)</em>. Kott has a substantive, unedited platform video outlining priorities 
       and a campaign Facebook page (listed below). At this stage, we have not yet logged a dedicated campaign website, long-form 
-      interviews, or a truly public facing campaign event. What that means is that there is an upcoming event with Kott and two other candidates that is 
+      interviews, or a truly public facing campaign event. What that means is that there was an event with Taylor and two other candidates that was 
       technically a fundraiser, which limits voters and the press from hearing campaign messaging without directly supporting it. It also raises the question 
-      of whether these 3 candidates are campaigning together without publicly saying so.
+      of whether these 3 candidates are campaigning together without publicly saying so. This also presents the challenge citizen journalists who cover elections 
+      face during the throws of campaign season: even if there was a possibility of hanging around the fundraiser for interview opportunities before or after the 
+      event, it was one of at least 3 events that evening... so, I chose to go where I believed I would have a better chance of getting substantive info, and I would 
+      guess I made the right choice.
       <br><br>
       What would move this rating up: a central campaign site with organized agenda/issue pages; coordinated communication with the press; long-form 
       interviews (radio/podcast/video); a truly public and advertised campaign event; and timely replies to voter/media inquiries. As those pieces appear, 
