sooy transparency rating updated

--- a/child_pages/cc-elections/Candidates/gregoire.html
+++ b/child_pages/cc-elections/Candidates/gregoire.html
@@ -176,7 +176,7 @@
       alternative paths to water-bill collection; suggestion box/email) and ties them to funding concepts (grants/bonds/Clean Communities).
       <br><br>
 
-      To move toward a top-tier transparency rating, we’ll look for: (1) a centralized, always-updating web presence; (2) consistent public 
+      To move toward a top-tier transparency rating, we’ll look for: (1) a centralized, consitently-updating web presence; (2) consistent public 
       availability (events, forums, long-form interviews); (3) concrete, time-bound plans/budgets for staffing/equipment; and (4) follow-through 
       on communications promises (e.g., documented responses to resident input). Also, with the recent plane banner at the Millville football game, it might be time to make an official ticket 
       announcement for Sooy, McGinty, and Gregoire. For now, the rating sits at <em>“Above Average 
