--- a/child_pages/cc-elections/Candidates/mcquade.html
+++ b/child_pages/cc-elections/Candidates/mcquade.html
@@ -954,9 +954,10 @@
             access and public dialogue.
             <br>
             <br>
-            However, to fully secure “top-tier” status on transparency and accessibility, McQuade would still need to check some remaining boxes: 
-            launch a comprehensive, regularly updated campaign website and hold at least one well-advertised public meet-and-greet event specifically designed 
-            for voters to ask questions face-to-face. Taking those kinds of steps would complete the picture of a candidate who is not only accessible but also 
+            However, to fully secure “top-tier” status on transparency and accessibility, McQuade would still need to check some remaining boxes such as 
+            launching a comprehensive, regularly updated campaign website, hold at least one well-advertised public meet-and-greet event specifically designed 
+            for voters to ask questions face-to-face, and formally announcing whether he and Summers are part of a ticket. Taking those kinds of steps would complete 
+            the picture of a candidate who is not only accessible but also 
             proactively organized and easy for every voter to find.
         </details>
     </div> 
