--- a/child_pages/cc-elections/Candidates/sooy.html
+++ b/child_pages/cc-elections/Candidates/sooy.html
@@ -170,17 +170,28 @@
             <h4 class="quick-sum">Rating Explanation</h4>
             <h6 class="page-title">Joe Sooy</h6>
             <p>
-            In conversation, Sooy shows a command of details and a willingness to defend trade-offs, often grounding answers in the mechanics of projects, ordinances, or finance rules. That 
-            clarity is valuable, but what rounds out a strong campaign is how accessible that clarity becomes to the public. Beyond long interviews, voters usually look for touchpoints like 
-            meet-and-greets, an official campaign website, or even short, regular updates on project status.
-            <br><br>
-            Millville’s political culture often looks contentious on camera, and Sooy doesn’t shy from that. He argues open debate is part of accountability—even when bluntness is labeled 
-            as “mean.” But from a campaign perspective, adding more structured outreach could broaden the picture: making his transparency and process-based approach visible in settings where 
-            residents aren’t tuning in to full meetings or multi-hour interviews.
-            <br><br>
-            From an InformTheVoteNJ standpoint, Sooy rates above average for transparency and accessibility because he engages directly and provides detailed answers. To push toward “top tier,” 
-            a few classic campaign elements—like a public event series, consistent web presence, or a simple quarterly progress update—would make his message and project tracking easier for 
-            voters to follow outside of City Hall.
+            In conversation, Sooy shows a command of details and a willingness to defend trade-offs, often grounding answers in the mechanics of projects, 
+            ordinances, or finance rules. That clarity is valuable, but what rounds out a strong campaign is how accessible that clarity becomes to the public.
+            <br>
+            <br>
+            Over the past few weeks, he has taken visible steps in that direction. He’s scheduled a second appearance on the InformTheVoteNJ Radio Hour 
+            (9/21), sat down for a separate interview with content creator JT Burks, is planning a meet-and-greet event open to all candidates, and 
+            will attend a second candidates’ forum at the Four Seasons living community. These activities broaden the ways voters can hear directly 
+            from him beyond City Hall and long meetings.
+            <br>
+            <br>
+            Millville’s political culture often looks contentious on camera, and Sooy doesn’t shy from that. He argues open debate is part of 
+            accountability—even when bluntness is labeled as “mean.” By pairing that willingness to engage with more structured outreach, he is starting 
+            to make his transparency and process-based approach visible in settings where residents aren’t tuning in to full meetings or multi-hour interviews.
+            <br>
+            <br>
+            From an InformTheVoteNJ standpoint, Sooy currently rates above average, for transparency and accessibility because he engages 
+            directly and 
+            provides detailed answers. With the planned public events and additional media appearances, he’s moving closer to “top tier.” The remaining 
+            steps are classic, proactive transparency markers in 2025: creating his own comprehensive campaign website—rather than relying on press 
+            coverage—and clarifying ticket or slate affiliations (especially after the recent plane banner over the Millville football game raised questions 
+            about whether he, McGinty, and Gregoire are <strong>formally</strong> running together). Taking those actions would signal a full embrace of the higher standard 
+            of openness now expected in Cumberland County campaigns.
             <br><br>
             Click the red x at the top of this box and then scroll down for more in-depth information and sources.
             </p>
