sooy burks interview added

--- a/child_pages/cc-elections/Candidates/sooy.html
+++ b/child_pages/cc-elections/Candidates/sooy.html
@@ -421,6 +421,151 @@
             </div>
 
             <div class="video-box-modal can-sec">
+                <h3 class="video-heading">“The Race to Millville City Commission” — JT Burks Interview with Joe Sooy (2025)</h3>
+
+                <iframe src="https://www.youtube.com/embed/Ot7sX1Myz1A?si=7dk8_Fl6jLPeI3J1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                <br><br>
+
+                <details>
+                    <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">📋 Click here for full interview summary 📋</summary>
+                    <br><br>
+                    <div style="padding: 15px 25px; text-align: left;">
+                        <p>
+                            Commissioner Joe Sooy sits down with coach/host JT Burks for a focused, on-the-ground conversation about execution,
+                            youth investment, and staying the course on economic development. He connects his background (Air Force service,
+                            Wheaton Glass, mathematics degree, corrections leadership) to a no-nonsense “get it done” style that favors finishing
+                            projects and holding people accountable.
+                        </p>
+                        <p>
+                            A centerpiece story: relocating football fields after safety issues—navigating a resistant school board, unexpected site
+                            problems, and even cutting downed trees himself until City crews joined in. From there he maps out the broader playbook:
+                            grow the Hurley Industrial Park (CRP contract; additional parcels moving), keep UEZ programs practical (façade grants up
+                            to $20k, targeted roadwork entrances into the zone), continue the Wheaton demolition with realistic reuse (industrial/
+                            warehousing due to contamination), and time High Street work around state bump-out plans.
+                        </p>
+                        <p>
+                            He argues leadership means balancing competing demands (employees, parks, infrastructure) with resident-first
+                            accountability, building momentum with volunteers (railroad-track cleanups), and using tools like PILOTs while learning
+                            from what doesn’t work. Bottom line: jobs and opportunity keep families here; truth beats easy promises; and Millville
+                            needs a commission rowing in the same direction to avoid stalling active projects.
+                        </p>
+                    </div>
+                </details>
+
+                <br><br>
+
+                <details>
+                    <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">⏳ Click to view timestamps, topics, and takeaways ⏳</summary>
+                    <div class="video-summary" style="margin-top: 1em;">
+                        <h2>Interview Summary – Joe Sooy on JT Burks’ “The Race to Millville City Commission”</h2>
+                        <p>This table highlights the key topics covered in the interview, summarizing major takeaways per section.</p>
+                        <table border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+                            <thead>
+                            <tr>
+                                <th style="text-align: left;">Timestamp</th>
+                                <th style="text-align: left;">Topic</th>
+                                <th style="text-align: left;">Key Takeaways</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>0:00–1:20</td>
+                                <td>Background & roots</td>
+                                <td>Millville-raised; Air Force (overseas duty); Wheaton Glass; Mathematics degree; retired from corrections; multiple runs for office.</td>
+                            </tr>
+                            <tr>
+                                <td>1:20–2:45</td>
+                                <td>Youth projects & “get it done” ethos</td>
+                                <td>Helped resurface Union Lake basketball courts; prioritizes youth amenities (walkway at high school, volleyball); reputation for finishing tasks.</td>
+                            </tr>
+                            <tr>
+                                <td>2:45–5:10</td>
+                                <td>Football fields relocation story</td>
+                                <td>Field hazards and condemned building forced relocation; faced school-board resistance; when tree removal piled up, he personally brought a chainsaw until City crews arrived.</td>
+                            </tr>
+                            <tr>
+                                <td>5:10–6:30</td>
+                                <td>Behind-the-scenes work</td>
+                                <td>Much of the lift is invisible; invites residents and candidates to see processes outside of election season.</td>
+                            </tr>
+                            <tr>
+                                <td>6:30–7:45</td>
+                                <td>Old vs. present Millville</td>
+                                <td>Past had plentiful, good-paying jobs; priority is restoring opportunity so people can exit poverty.</td>
+                            </tr>
+                            <tr>
+                                <td>7:45–9:35</td>
+                                <td>Leadership & accountability</td>
+                                <td>Limited resources mean trade-offs; some employees are excellent, others weaponize “protections”; resident-first accountability even when criticized as “mean.”</td>
+                            </tr>
+                            <tr>
+                                <td>9:35–11:05</td>
+                                <td>Hurley Industrial Park & active projects</td>
+                                <td>Focused first term on economic development; large CRP contract moving toward close; other industrial parcels revived to build a sustainable revenue base.</td>
+                            </tr>
+                            <tr>
+                                <td>10:50–11:20</td>
+                                <td>UEZ façade grants</td>
+                                <td>UEZ back in-house; grants up to ~$20k to improve storefronts; private investment returning downtown.</td>
+                            </tr>
+                            <tr>
+                                <td>11:20–11:45</td>
+                                <td>Wheaton demolition & reuse limits</td>
+                                <td>Demolition continues; contamination restricts future use to industrial/warehousing—sets realistic expectations vs. “park/amusement” ideas.</td>
+                            </tr>
+                            <tr>
+                                <td>12:05–13:45</td>
+                                <td>If re-elected: keep the toolkit moving</td>
+                                <td>Expand UEZ coverage; continue approvals; pave priority corridors (Buck St first; then Broad segment feeding the zone) to support reinvestment.</td>
+                            </tr>
+                            <tr>
+                                <td>13:45–14:15</td>
+                                <td>High Street timing</td>
+                                <td>Delay major work until state bump-out project lands; avoid tearing up streets twice.</td>
+                            </tr>
+                            <tr>
+                                <td>14:05–14:15</td>
+                                <td>Sewer plant upgrades</td>
+                                <td>Capacity and infrastructure are prerequisites for residents and industry growth.</td>
+                            </tr>
+                            <tr>
+                                <td>14:45–15:40</td>
+                                <td>Obstruction & momentum</td>
+                                <td>Commission turnover slowed starts on new projects; wants a like-minded team to keep momentum and avoid stalls.</td>
+                            </tr>
+                            <tr>
+                                <td>16:07–17:25</td>
+                                <td>Civic habits & cleanups</td>
+                                <td>Pick up trash; coordinated volunteer cleanups along the railroad; small actions compound pride and safety.</td>
+                            </tr>
+                            <tr>
+                                <td>17:10–17:25</td>
+                                <td>PILOTs & pragmatism</td>
+                                <td>Use PILOTs to attract jobs; expect wins and misses; treat failures as lessons to iterate policy.</td>
+                            </tr>
+                            <tr>
+                                <td>18:44–19:10</td>
+                                <td>Ballot & crowded field</td>
+                                <td>Identifies ballot spot (“4G” during taping); notes 19-candidate field after signature-rule changes.</td>
+                            </tr>
+                            <tr>
+                                <td>19:06–20:24</td>
+                                <td>Truth vs. promises</td>
+                                <td>Asks voters to weigh records over rhetoric; truth can sound “mean,” but empty promises backfire after Election Day.</td>
+                            </tr>
+                            <tr>
+                                <td>20:45–End</td>
+                                <td>Closing & teaser</td>
+                                <td>Thanks JT; acknowledges media gaps; hints at a game-day plane banner over the Millville football field—“just look up.”</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </details>
+            </div>
+
+            <div class="video-box-modal can-sec">
                 <h3 class="video-heading">Millville Q&amp;A w/ Vice Mayor Joe Sooy: Economic Development, Nabb Ave, Cannabis &amp; Policing</h3>
 
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/H3bTIfkFfx4?si=aegAcm6wKgrfXNLw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    
