summers dual modal abandoned

--- a/child_pages/cc-elections/Candidates/summers.html
+++ b/child_pages/cc-elections/Candidates/summers.html
@@ -250,7 +250,16 @@
                  
              </div>
 
-             <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
+             <!-- <button id="quick-summary-reopen" class="quick-sum">quick summary</button> -->
+             <details class="can-sec" id="quick-summary">
+                <summary style="color: blue;">
+                    <strong>Quick Summary</strong>
+                </summary>
+                David Summers is a first-time Millville City Commission candidate with over three decades of local manufacturing experience at Wheaton/NIPRO as a CNC operator, programmer, and 
+                supervisor. He’s known for bringing his own heavy equipment to volunteer cleanups, emphasizing citywide cleanliness, fair trash policy, and listening directly to residents through 
+                door-to-door outreach and a weekly call-in radio show. Summers supports rebuilding local press, practical civics education, and better information access so people can more easily 
+                navigate city services.
+            </details>
 
              <div class="election-date">
                  <p>This election is on November 4th, 2025</p>
@@ -548,7 +557,23 @@
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
         <img class="gauge" src="../../../assets/gauge_dead_center.svg" alt="">
-        <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
+        <!-- <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button> -->
+        <details class="can-sec" id="transparency-accessibility">
+            <summary style="color: blue;">
+                <strong>Explanation</strong>
+            </summary>
+                David Summers is a first-time candidate who has shown early signs of accessibility and openness. His initial interviews with InformTheVoteNJ were brief but cordial, giving voters 
+                a basic sense of his background and priorities. He has since continued co-hosting a weekly call-in radio show with Robert McQuade, where residents can ask questions live — a 
+                positive signal of ongoing engagement. 
+                <br><br> 
+                While his campaign messaging is still developing, Summers has proactively invited InformTheVoteNJ to do a walkthrough of his day 
+                job to discuss his work and expand on his platform in greater depth. This willingness to open up his workplace and provide more context about his skills and approach suggests a 
+                trajectory toward stronger transparency. 
+                <br><br> 
+                Given these factors, Summers currently holds an <strong>“Average (Trending Upwards)”</strong> transparency rating. To raise that rating further, he would benefit from 
+                consolidating his positions into a detailed, public-facing platform and participating in longer-form interviews that explore his agenda beyond surface-level issues. 
+        </details>
+
     </div> 
 
      
