--- a/child_pages/cc-elections/Candidates/branin.html
+++ b/child_pages/cc-elections/Candidates/branin.html
@@ -165,10 +165,13 @@
     <h6 class="page-title">Newell Branin</h6>
     <p>
       Initial transparency/accessibility view: <em>Developing (early-stage)</em>. As of now, Branin has a campaign Facebook page and one campaign-related 
-      statement (see below). We have not yet logged a dedicated campaign website, long-form interviews, or a truly public facing campaign event. What that 
-      means is that there is an upcoming event with Kott and two other candidates that is 
+      statement (see below). We have not yet logged a dedicated campaign website, long-form interviews, or a truly public facing campaign event. What that means is that there was an event with 
+      Branin and two other candidates that was 
       technically a fundraiser, which limits voters and the press from hearing campaign messaging without directly supporting it. It also raises the question 
-      of whether these 3 candidates are campaigning together without publicly saying so.
+      of whether these 3 candidates are campaigning together without publicly saying so. This also presents the challenge citizen journalists who cover elections 
+      face during the throws of campaign season: even if there was a possibility of hanging around the fundraiser for interview opportunities before or after the 
+      event, it was one of at least 3 events that evening... so, I chose to go where I believed I would have a better chance of getting substantive info, and I would 
+      guess I made the right choice.
       <br><br>
       What would move this up: a central campaign site with organized agenda/issue sections; a truly public event listing; long-form interviews; 
       and prompt replies to voter/media inquiries. As these materials appear, we’ll update the rating 
